<resources>

    <!-- "For Weekly stuff -->
    <string name="app_name">Calendar</string>
    <string name="title_activity_view_weekly">Weekly</string>
    <string name="textEvent">Add Events</string>
    <string name="textWeek">Weekly</string>

    <!--"For AppBar" -->
    <string name="to_monthly">Monthly</string>
    <string name="to_weekly">Weekly</string>
    <string name="to_3weekly">Three Day</string>
    <string name="to_daily">Daily</string>
    <string name="to_yearly">Yearly</string>
    <string name="to_event">Events</string>

    <!--"For eventForm -->
    <string name="eventFormTitle">Event</string>
    <string name="title">Title </string>
    <string name="enterTitle">Title</string>
    <string name="startTime">Start Time</string>
    <string name="enterStartTime">Enter start time</string>
    <string name="endTime">End Time</string>
    <string name="enterEndTime">Enter end time</string>
    <string name="save">Save</string>
...
