<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.calendar.ViewWeekly">

    <include layout="@layout/toolbar"
        android:id="@+id/weeklyToolBar"></include>

    <me.jlurena.revolvingweekview.WeekView
        android:id="@+id/weekView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/weeklyToolBar"
        android:layout_marginTop="0dp"
        app:dayBackgroundColor="#05000000"
        app:eventTextColor="@android:color/white"
        app:headerColumnBackground="#ffefefef"
        app:headerColumnPadding="8dp"
        app:headerColumnTextColor="#8f000000"
        app:headerRowBackgroundColor="@android:color/white"
        app:headerRowPadding="12dp"
        app:hourHeight="60dp"
        app:noOfVisibleDays="3"
        app:todayBackgroundColor="#1848adff" />


</RelativeLayout>