...
            android:layout_marginTop="25dp"
            android:layout_margin="25dp"
            android:background="#FFFFFF"
            android:text="@string/textEvent" />

        <Button style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/buttonWeek"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="25dp"
            android:layout_margin="25dp"
            android:background="#FFFFFF"
            android:text="@string/textWeek" />
...
